--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         © <span id="year"></span> Cid Kageno — All Rights Reserved.
       </p>
       <p class="opacity-50 text-xs mt-1">
-        Built with AI tools and creative coding
+        Built with 💝 and creative coding
       </p>
     </div>
   </footer>
