--- a/chat.html
+++ b/chat.html
@@ -327,7 +327,7 @@
     const sendBtn = document.getElementById('send-btn');
     const bottomSpacer = document.querySelector('.bottom-spacer');
 
-    const API_URL = "https://noobs-api.top/dipto/baby";
+    const API_URL = "https://rulebase-bot-1test.onrender.com/chat";
     let isProcessing = false;
     let typingIndicator = null;
 
