--- a/chat.html
+++ b/chat.html
@@ -6,24 +6,20 @@
   <title>ShadowGPT | Chat</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
-    tailwind.config = { 
-      darkMode: 'media', 
-      theme: { extend: {} } 
-    };
+    tailwind.config = { darkMode: 'media', theme: { extend: {} } };
   </script>
   <style>
-    /* --- Styles are same as your previous HTML --- */
     * { box-sizing: border-box; margin: 0; padding: 0; -webkit-tap-highlight-color: transparent; }
     body, html { height: 100%; width: 100%; overflow: hidden; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; position: fixed; }
-    body { display: flex; flex-direction: column; background: inherit; color: inherit; position: fixed; top: 0; left: 0; right: 0; bottom: 0; }
-    header { height: 56px; min-height: 56px; width: 100%; display: flex; align-items: center; padding: 0 16px; border-bottom: 1px solid rgba(0,0,0,0.1); background: inherit; z-index: 10; flex-shrink: 0; }
+    body { display: flex; flex-direction: column; background: inherit; color: inherit; top: 0; left: 0; right: 0; bottom: 0; }
+    header { height: 56px; width: 100%; display: flex; align-items: center; padding: 0 16px; border-bottom: 1px solid rgba(0,0,0,0.1); background: inherit; z-index: 10; }
     .dark header { border-bottom: 1px solid rgba(255,255,255,0.1); }
     #chat-container { flex: 1; overflow-y: auto; overflow-x: hidden; padding: 8px 12px; display: flex; flex-direction: column; -webkit-overflow-scrolling: touch; background: inherit; position: relative; min-height: 0; }
     .chat-bubble { max-width: 85%; word-wrap: break-word; position: relative; animation: fadeIn 0.3s ease-out; margin: 2px 0; flex-shrink: 0; }
     .chat-bubble.user { align-self: flex-end; background: #007AFF; color: white; border-radius: 18px 4px 18px 18px; padding: 12px 16px; margin-left: auto; }
     .chat-bubble.bot { align-self: flex-start; background: rgba(120, 120, 128, 0.12); color: inherit; border-radius: 4px 18px 18px 18px; padding: 12px 16px; margin-right: auto; }
     .dark .chat-bubble.bot { background: rgba(255, 255, 255, 0.08); }
-    #input-area { width: 100%; padding: 12px 16px; background: inherit; border-top: 1px solid rgba(0,0,0,0.1); z-index: 100; flex-shrink: 0; position: relative; }
+    #input-area { width: 100%; padding: 12px 16px; background: inherit; border-top: 1px solid rgba(0,0,0,0.1); flex-shrink: 0; position: relative; }
     .dark #input-area { border-top: 1px solid rgba(255,255,255,0.1); }
     .input-wrapper { display: flex; align-items: center; gap: 8px; width: 100%; }
     #user-input { flex: 1; padding: 12px 16px; font-size: 16px; border: 1px solid rgba(0,0,0,0.2); border-radius: 20px; background: rgba(120, 120, 128, 0.12); color: inherit; outline: none; min-height: 44px; max-height: 100px; resize: none; line-height: 1.4; overflow: hidden; }
@@ -69,9 +65,7 @@
     </div>
   </div>
 
-  <footer>
-    © Cid Kageno
-  </footer>
+  <footer>© Cid Kageno</footer>
 
   <script src="https://unpkg.com/feather-icons"></script>
   <script>
@@ -133,9 +127,7 @@
           headers: { "Content-Type": "application/json", "Accept": "application/json" },
           body: JSON.stringify({ message: message })
         });
-
         if (!response.ok) throw new Error(`API error: ${response.status}`);
-
         const data = await response.json();
         return data.reply || "The shadows are silent...";
       } catch(err) {
