--- a/chat.html
+++ b/chat.html
@@ -1,171 +1,105 @@
 <!DOCTYPE html>
-<html lang="en" class="bg-white text-black dark:bg-black dark:text-white">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>ShadowGPT | Chat</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>RuleBase Chat</title>
   <script>
-    tailwind.config = { darkMode: 'media', theme: { extend: {} } };
+    async function sendMessage() {
+      const input = document.getElementById('userMessage');
+      const message = input.value.trim();
+      if (!message) return;
+
+      addMessage('You', message);
+      input.value = '';
+
+      try {
+        const response = await fetch('https://rulebase-bot-1test.onrender.com/chat', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify({ message })
+        });
+
+        const data = await response.json();
+        addMessage('Bot', data.reply || JSON.stringify(data));
+      } catch (error) {
+        addMessage('Bot', 'Error: Could not reach server.');
+        console.error(error);
+      }
+    }
+
+    function addMessage(sender, text) {
+      const chatBox = document.getElementById('chatBox');
+      const msgDiv = document.createElement('div');
+      msgDiv.className = sender === 'You' ? 'user-msg' : 'bot-msg';
+      msgDiv.textContent = `${sender}: ${text}`;
+      chatBox.appendChild(msgDiv);
+      chatBox.scrollTop = chatBox.scrollHeight;
+    }
+
+    function handleKey(event) {
+      if (event.key === 'Enter') {
+        sendMessage();
+      }
+    }
   </script>
   <style>
-    * { box-sizing: border-box; margin: 0; padding: 0; -webkit-tap-highlight-color: transparent; }
-    body, html { height: 100%; width: 100%; overflow: hidden; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; position: fixed; }
-    body { display: flex; flex-direction: column; background: inherit; color: inherit; top: 0; left: 0; right: 0; bottom: 0; }
-    header { height: 56px; width: 100%; display: flex; align-items: center; padding: 0 16px; border-bottom: 1px solid rgba(0,0,0,0.1); background: inherit; z-index: 10; }
-    .dark header { border-bottom: 1px solid rgba(255,255,255,0.1); }
-    #chat-container { flex: 1; overflow-y: auto; overflow-x: hidden; padding: 8px 12px; display: flex; flex-direction: column; -webkit-overflow-scrolling: touch; background: inherit; position: relative; min-height: 0; }
-    .chat-bubble { max-width: 85%; word-wrap: break-word; position: relative; animation: fadeIn 0.3s ease-out; margin: 2px 0; flex-shrink: 0; }
-    .chat-bubble.user { align-self: flex-end; background: #007AFF; color: white; border-radius: 18px 4px 18px 18px; padding: 12px 16px; margin-left: auto; }
-    .chat-bubble.bot { align-self: flex-start; background: rgba(120, 120, 128, 0.12); color: inherit; border-radius: 4px 18px 18px 18px; padding: 12px 16px; margin-right: auto; }
-    .dark .chat-bubble.bot { background: rgba(255, 255, 255, 0.08); }
-    #input-area { width: 100%; padding: 12px 16px; background: inherit; border-top: 1px solid rgba(0,0,0,0.1); flex-shrink: 0; position: relative; }
-    .dark #input-area { border-top: 1px solid rgba(255,255,255,0.1); }
-    .input-wrapper { display: flex; align-items: center; gap: 8px; width: 100%; }
-    #user-input { flex: 1; padding: 12px 16px; font-size: 16px; border: 1px solid rgba(0,0,0,0.2); border-radius: 20px; background: rgba(120, 120, 128, 0.12); color: inherit; outline: none; min-height: 44px; max-height: 100px; resize: none; line-height: 1.4; overflow: hidden; }
-    .dark #user-input { background: rgba(255, 255, 255, 0.08); border-color: rgba(255,255,255,0.2); }
-    #user-input:focus { border-color: #007AFF; }
-    #send-btn { width: 44px; height: 44px; min-width: 44px; display: flex; align-items: center; justify-content: center; border-radius: 50%; background: #007AFF; color: white; border: none; cursor: pointer; transition: transform 0.2s; flex-shrink: 0; }
-    #send-btn:hover:not(:disabled) { transform: scale(1.05); }
-    #send-btn:disabled { opacity: 0.5; cursor: not-allowed; background: rgba(0, 122, 255, 0.5); }
-    .typing-indicator { align-self: flex-start; background: rgba(120, 120, 128, 0.12); color: gray; padding: 8px 16px; border-radius: 4px 18px 18px 18px; margin: 2px 0; font-size: 14px; animation: pulse 1.5s infinite; max-width: 85%; }
-    .dark .typing-indicator { background: rgba(255, 255, 255, 0.08); }
-    @keyframes fadeIn { from { opacity: 0; transform: translateY(10px) scale(0.95); } to { opacity: 1; transform: translateY(0) scale(1); } }
-    @keyframes pulse { 0%,100% { opacity: 1; } 50% { opacity: 0.5; } }
-    #chat-container::-webkit-scrollbar { width: 4px; }
-    #chat-container::-webkit-scrollbar-track { background: transparent; }
-    #chat-container::-webkit-scrollbar-thumb { background: rgba(0,0,0,0.2); border-radius: 2px; }
-    .dark #chat-container::-webkit-scrollbar-thumb { background: rgba(255,255,255,0.2); }
-    .bottom-spacer { height: 8px; flex-shrink: 0; }
+    body {
+      font-family: Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 0;
+      padding: 0;
+      height: 100vh;
+      background: #f4f4f4;
+    }
+    #chatBox {
+      width: 90%;
+      max-width: 600px;
+      height: 70vh;
+      overflow-y: auto;
+      border: 1px solid #ccc;
+      padding: 10px;
+      margin-top: 20px;
+      background: #fff;
+    }
+    .user-msg {
+      text-align: right;
+      margin: 5px 0;
+      color: #007bff;
+    }
+    .bot-msg {
+      text-align: left;
+      margin: 5px 0;
+      color: #333;
+    }
+    #inputBox {
+      display: flex;
+      width: 90%;
+      max-width: 600px;
+      margin-top: 10px;
+    }
+    #userMessage {
+      flex: 1;
+      padding: 10px;
+      font-size: 16px;
+    }
+    #sendBtn {
+      padding: 10px 20px;
+      font-size: 16px;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
-
-  <header>
-    <div class="flex items-center gap-3">
-      <div class="w-8 h-8 rounded-full bg-gradient-to-r from-blue-500 to-purple-500"></div>
-      <div>
-        <h1 class="font-semibold text-lg">ShadowGPT</h1>
-        <p class="text-xs opacity-60">Online</p>
-      </div>
-    </div>
-  </header>
-
-  <div id="chat-container">
-    <div class="chat-bubble bot">Welcome, shadow walker. Ask anything you desire.</div>
-    <div class="bottom-spacer"></div>
+  <h1>RuleBase Chat</h1>
+  <div id="chatBox"></div>
+  <div id="inputBox">
+    <input id="userMessage" type="text" placeholder="Type your message..." onkeydown="handleKey(event)">
+    <button id="sendBtn" onclick="sendMessage()">Send</button>
   </div>
-
-  <div id="input-area">
-    <div class="input-wrapper">
-      <textarea id="user-input" placeholder="Message..." aria-label="Type your message" autocomplete="off" rows="1"></textarea>
-      <button id="send-btn" aria-label="Send message">
-        <i data-feather="send"></i>
-      </button>
-    </div>
-  </div>
-
-  <footer>© Cid Kageno</footer>
-
-  <script src="https://unpkg.com/feather-icons"></script>
-  <script>
-    feather.replace();
-
-    const chatContainer = document.getElementById('chat-container');
-    const userInput = document.getElementById('user-input');
-    const sendBtn = document.getElementById('send-btn');
-    const bottomSpacer = document.querySelector('.bottom-spacer');
-
-    let isProcessing = false;
-    let typingIndicator = null;
-
-    userInput.addEventListener('input', function() {
-      this.style.height = 'auto';
-      this.style.height = Math.min(this.scrollHeight, 100) + 'px';
-      scrollToBottom();
-    });
-
-    function scrollToBottom() {
-      chatContainer.scrollTop = chatContainer.scrollHeight;
-    }
-
-    function sanitizeInput(text) {
-      const div = document.createElement('div');
-      div.textContent = text;
-      return div.innerHTML;
-    }
-
-    function appendMessage(text, sender = 'bot') {
-      const bubble = document.createElement('div');
-      bubble.classList.add('chat-bubble', sender);
-      bubble.innerHTML = sender === 'user' ? sanitizeInput(text) : text;
-      chatContainer.insertBefore(bubble, bottomSpacer);
-      scrollToBottom();
-      return bubble;
-    }
-
-    function showTypingIndicator() {
-      if (typingIndicator) typingIndicator.remove();
-      typingIndicator = document.createElement('div');
-      typingIndicator.classList.add('typing-indicator');
-      typingIndicator.textContent = "ShadowGPT is typing...";
-      chatContainer.insertBefore(typingIndicator, bottomSpacer);
-      scrollToBottom();
-    }
-
-    function hideTypingIndicator() {
-      if (typingIndicator) {
-        typingIndicator.remove();
-        typingIndicator = null;
-      }
-    }
-
-    async function queryAI(message) {
-      try {
-        const response = await fetch("https://rulebase-bot-1test.onrender.com/chat", {
-          method: "POST",
-          headers: { "Content-Type": "application/json", "Accept": "application/json" },
-          body: JSON.stringify({ message: message })
-        });
-        if (!response.ok) throw new Error(`API error: ${response.status}`);
-        const data = await response.json();
-        return data.reply || "The shadows are silent...";
-      } catch(err) {
-        console.error('API Error:', err);
-        return "The shadows are disturbed... try again later.";
-      }
-    }
-
-    async function sendMessage() {
-      if (isProcessing) return;
-      const message = userInput.value.trim();
-      if (!message) return;
-
-      isProcessing = true;
-      appendMessage(message, 'user');
-      userInput.value = '';
-      userInput.style.height = 'auto';
-      showTypingIndicator();
-
-      try {
-        const botReply = await queryAI(message);
-        hideTypingIndicator();
-        appendMessage(botReply, 'bot');
-      } catch (error) {
-        hideTypingIndicator();
-        appendMessage("Failed to get response from the shadows.", 'bot');
-      } finally {
-        isProcessing = false;
-        userInput.focus();
-      }
-    }
-
-    sendBtn.addEventListener('click', (e) => { e.preventDefault(); sendMessage(); });
-    userInput.addEventListener('keydown', (e) => { if (e.key === 'Enter' && !e.shiftKey) { e.preventDefault(); sendMessage(); } });
-
-    window.onload = () => { userInput.focus(); scrollToBottom(); };
-    const observer = new MutationObserver(() => { feather.replace(); scrollToBottom(); });
-    observer.observe(chatContainer, { childList: true });
-  </script>
 </body>
 </html>
