--- a/chat.html
+++ b/chat.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>RuleBase Chat (API)</title>
+  <title>RuleBase Chat (Delayed)</title>
   <script>
-    const PROXY_URL = 'http://localhost:3000/chat';
+    const PROXY_URL = 'http://localhost:3000/chat'; // Node.js proxy endpoint
 
     async function sendMessage() {
       const input = document.getElementById('userMessage');
@@ -23,9 +23,15 @@
         });
 
         const data = await response.json();
-        addMessage('Bot', data.reply || 'No reply');
+
+        // Delay bot reply by 1 second
+        setTimeout(() => {
+          addMessage('Bot', data.reply || 'No reply');
+        }, 1000); // 1000ms = 1 second
       } catch (error) {
-        addMessage('Bot', 'Error: Could not reach server.');
+        setTimeout(() => {
+          addMessage('Bot', 'Error: Could not reach server.');
+        }, 1000);
         console.error(error);
       }
     }
@@ -44,8 +50,26 @@
     }
   </script>
   <style>
-    body { font-family: Arial; display: flex; flex-direction: column; align-items: center; margin: 0; padding: 0; height: 100vh; background: #f4f4f4; }
-    #chatBox { width: 90%; max-width: 600px; height: 70vh; overflow-y: auto; border: 1px solid #ccc; padding: 10px; margin-top: 20px; background: #fff; }
+    body {
+      font-family: Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 0;
+      padding: 0;
+      height: 100vh;
+      background: #f4f4f4;
+    }
+    #chatBox {
+      width: 90%;
+      max-width: 600px;
+      height: 70vh;
+      overflow-y: auto;
+      border: 1px solid #ccc;
+      padding: 10px;
+      margin-top: 20px;
+      background: #fff;
+    }
     .user-msg { text-align: right; margin: 5px 0; color: #007bff; }
     .bot-msg { text-align: left; margin: 5px 0; color: #333; }
     #inputBox { display: flex; width: 90%; max-width: 600px; margin-top: 10px; }
